Finesed UI for left section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 <body>
   <div class="center">
     <section id="result">
-      Your Result
-      <div>
-        76
-        of 100
+      <p class="x" id="re">Your Result</p>
+      <div class="circle">
+        <br>
+        <h1>76</h1>
+        <p style=" font-size: 14px; position: relative; color: hsl(241, 100%, 89%);">of 100</p>
       </div>
 
       <h3>Great</h3>
-      You scored higher than 65% of the people who have taken these tests.
+      <p class="x" id="y">You scored higher than 65% of<br> the people who have taken<br> these tests.</p>
     </section>
     <section id="num">
       Summary
