Edited images to png

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="center">
-    <section id="result">
+    <section id="left">
       <p class="x" id="re">Your Result</p>
       <div class="circle">
         <br>
@@ -28,21 +28,34 @@
       <p class="x" id="y">You scored higher than 65% of<br> the people who have taken<br> these tests.</p>
     </section>
     <section id="num">
-      Summary
+      <p id="sum" class="renum">Summary</p>
 
-      Reaction
-      80 / 100
+      <div class="results">
+        <img src="assets/images/icon-reaction.png">
+        <p class="testans">Reaction</p>
+        80 / 100
+      </div>
 
-      Memory
-      92 / 100
+      <div class="results">
+        <img src="assets/images/icon-memory.png">
+          Memory
+          92 / 100
+      </div>
 
-      Verbal
-      61 / 100
+      <div class="results">
+        <img src="assets/images/icon-verbal.png" >
+        Verbal
+        61 / 100
+      </div>
 
-      Visual
-      72 / 100
+      <div class="results">
+         <img src="assets/images/icon-visual.png">
+          Visual
+          72 / 100
+      </div>
 
       Continue
+
     </section>
   </div>
   
