Update to summary, I dont know why wext is like it

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
     <section id="num">
       <p id="sum" class="renum">Summary</p>
 
-      <div class="results">
+      <div class="results" id="red">
         <img src="assets/images/icon-reaction.png">
-        <p class="testans">Reaction</p>
-        80 / 100
+        <p class="testans" id="reaction">Reaction</p>
+        <p class="testans" id="ans">80</p> 
+        <p class="testans">/ 100</p>
       </div>
 
-      <div class="results">
+      <div class="results" >
         <img src="assets/images/icon-memory.png">
           Memory
           92 / 100
