--- a/index.html
+++ b/index.html
@@ -16,48 +16,50 @@
 </head>
 <body>
   <div class="center">
-    <section id="left">
+    <div id="left">
       <p class="x" id="re">Your Result</p>
       <div class="circle">
         <br>
         <h1>76</h1>
-        <p style=" font-size: 14px; position: relative; color: hsl(241, 100%, 89%);">of 100</p>
+        <p style=" font-size: 14px; position: relative; color: hsl(241, 100%, 89%); top: 20px;">of 100</p>
       </div>
-
       <h3>Great</h3>
       <p class="x" id="y">You scored higher than 65% of<br> the people who have taken<br> these tests.</p>
-    </section>
-    <section id="num">
-      <p id="sum" class="renum">Summary</p>
-
-      <div class="results" id="red">
-        <img src="assets/images/icon-reaction.png">
-        <p class="testans" id="reaction">Reaction</p>
-        <p class="testans" id="ans">80</p> 
-        <p class="testans">/ 100</p>
-      </div>
-
-      <div class="results" >
-        <img src="assets/images/icon-memory.png">
-          Memory
-          92 / 100
-      </div>
-
-      <div class="results">
-        <img src="assets/images/icon-verbal.png" >
-        Verbal
-        61 / 100
-      </div>
-
-      <div class="results">
-         <img src="assets/images/icon-visual.png">
-          Visual
-          72 / 100
-      </div>
-
-      Continue
-
-    </section>
+    </div>
+    <div class="right">
+      <h4 style="position: relative; left: 10px; font-family: 'Hanken Grotesk'; color: hsl(224, 30%, 27%);">Summary</h4>
+      <div class="socres">
+        <div class="score-reaction">
+          <div class="score-con">
+            <img src="assets/images/icon-reaction.png">
+            <span>Reaction</span>
+          </div>
+          <span class="black-text">80 / <span class="grey">100</span></span>
+        </div><br>
+        <div class="score-memory">
+          <div class="score-con">
+            <img src="assets/images/icon-memory.png">
+            <span>Memory</span>
+          </div>
+          <span class="black-text">92 / <span class="grey">100</span></span>
+        </div><br>
+        <div class="score-verbal">
+          <div class="score-con">
+            <img src="assets/images/icon-verbal.png">
+            <span>Verbal</span>
+          </div>
+          <span class="black-text">61 / <span class="grey">100</span></span>
+        </div><br>
+        <div class="score-visual">
+          <div class="score-con">
+            <img src="assets/images/icon-visual.png">
+            <span>Visual</span>
+          </div>
+          <span class="black-text">72 / <span class="grey">100</span></span>
+        </div>
+      </div><br>
+      <button>Contiune</button>
+    </div>
   </div>
   
   <div class="attribution">
